# ReikenWorkspace

./: README.md  apps_catalog.json  manifest.json  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: animatica.css  animatica.html  animatica.js  apps_catalog.json  escena.html  escena.js  index.html  index_project.css  index_projects.html  index_projects.js  login.html  personalization.html  planning.css  planning.html  planning.js  projects.html  register.html  reikanales.js  rk_auth.js  rk_components.js  rk_core.js  rk_crop.js  rk_personalization.js  rk_planning_db.js  rk_projects.js  rk_reference.js  rk_sync.js  rk_tutorial.js  script.html  script.js  script_zen_format.css  storyboard.html  storyboard.js  styles.css  test_tables.js  test_voice.html  worldbuilding.css  worldbuilding.html  worldbuilding.js  worldbuilding_cards.css
web/TomodachiVoice/talkmodachi-main/: .gitignore  README.md  docker-compose.yml
web/TomodachiVoice/talkmodachi-main/api/: .gitignore  Dockerfile  citra.py  lambda.py  main.py  newSongConverter.py  requirements.txt  sdl2-config.ini  songConverter.py  songParser.py  tts.py  ttsCommands.py  utils.py
web/TomodachiVoice/talkmodachi-main/docs/: hosting.md  internals.md  singing.md
web/TomodachiVoice/talkmodachi-main/functions/: mii.js  tts.js
web/TomodachiVoice/talkmodachi-main/gamePatch/: .gitignore  Makefile
web/sql/: mensajes_reacciones.sql
(+26 files in other folders)
