[package]
name = "reiken-workspace"
version = "1.3.0"
description = "Software de gestión de mundos y proyectos literarios."
authors = ["Reiken Studios"]
edition = "2021"

[lib]
name = "reiken_workspace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
